added responsiveness to header

--- a/html/catalog.html
+++ b/html/catalog.html
@@ -18,10 +18,10 @@
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/headings.css">
     <link rel="stylesheet" href="../css/main.css">
-    <!-- <link rel="stylesheet" href="../css/header.css"> -->
+    <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/catalog.css">
     <link rel="stylesheet" href="../css/top-btn.css">
-    <!-- <link rel="stylesheet" href="../css/footer.css"> -->
+    <link rel="stylesheet" href="../css/footer.css">
 </head>
     <title>Sévéa | Votre place de marché</title>
 </head>
@@ -31,7 +31,6 @@
     <!-- Header Start -->
     <header class="header" id="header">
         <nav class="navbar">
-            <img class="logo" src="../../img/LOGO/LOGO SEVEA.svg" alt="Logo">
             <ul class="links">
                 <li><a href="#" class="nav-link secondary-heading">Connexion</a></li>
                 <li><a href="#" class="nav-link secondary-heading">Inscription</a></li>
@@ -41,8 +40,10 @@
                         <p class="secondary-heading">999,00 €</p>
                         <p class="secondary-heading">50 articles</p>
                     </span>
+                    <a href="#" class="nav-link secondary-heading">Mon Panier</a>
                 </li>
             </ul>
+            <img class="logo" src="../../img/LOGO/LOGO SEVEA.svg" alt="Logo">
         </nav>
         <img class="wave" src="../../img/PHOTOS/wave-refined.png" alt="">
     
