--- a/html/home.html
+++ b/html/home.html
@@ -31,18 +31,19 @@
 
     <header class="header" id="header">
         <nav class="navbar">
-            <img class="logo" src="../../img/LOGO/LOGO SEVEA.svg" alt="Logo">
             <ul class="links">
                 <li><a href="#" class="nav-link secondary-heading">Connexion</a></li>
                 <li><a href="#" class="nav-link secondary-heading">Inscription</a></li>
                 <li>
-                    <img class="nav-img" src="../img/PICTOS/ICON1.svg" alt=""">
+                    <img class="nav-img" src="../img/PICTOS/ICON1.svg" alt="">
                     <span>
                         <p class="secondary-heading">999,00 €</p>
                         <p class="secondary-heading">50 articles</p>
                     </span>
+                    <a href="#" class="nav-link secondary-heading">Mon Panier</a>
                 </li>
             </ul>
+            <img class="logo" src="../../img/LOGO/LOGO SEVEA.svg" alt="Logo">
         </nav>
         <img class="wave" src="../../img/PHOTOS/wave-refined.png" alt="">
     
