--- a/html/catalog.html
+++ b/html/catalog.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/typography.css">
     <link rel="stylesheet" href="../css/width-container.css">
+    <link rel="stylesheet" href="../css/grid.css">
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/headings.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -430,10 +431,10 @@
     <div class="top-btn"><a href="#header"><i class="fa-solid fa-chevron-up"></i></a></div>
 
     <!-- footer -->
-<!-- 
-    <footer>
-        <div class="footer__container">
-            <img src="../img/LOGO/LOGO SEVEA.svg" alt="logo" class="logo">
+
+    <footer class="page-footer">
+        <div class="footer__container usefulContainer">
+            <img src="../img/LOGO/LOGO SEVEA.svg" alt="logo" class="footer-logo">
             <div class="info">
                 <div class="info__cell">
                     <h3 class="secondary-heading">informations</h3>
@@ -452,6 +453,6 @@
             </div>
             <p class="copyright">&copy; 2022 SAS Sévéa, tous droits réservés</p>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
