--- a/html/home.html
+++ b/html/home.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/variables.css">
     <link rel="stylesheet" href="../css/typography.css">
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/width-container.css">
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/headings.css">
     <link rel="stylesheet" href="../css/main.css">
@@ -213,27 +214,27 @@
 
 <!-- footer -->
 
-    <footer>
-        <div class="footer__container">
-            <img src="../img/LOGO/LOGO SEVEA.svg" alt="logo" class="logo">
-            <div class="info">
-                <div class="info__cell">
-                    <h3 class="secondary-heading">informations</h3>
-                    <p>Mentions légales</p>
-                    <p>CGV</p>
-                    <p>CGU</p>
-                </div>
-                <div class="info__cell">
-                    <h3 class="secondary-heading">espace personnnel</h3>
-                    <p>Mon compte</p>
-                </div>
-                <div class="info__cell">
-                    <h3 class="secondary-heading">espace fournisseur</h3>
-                    <p>Mon compte</p>
-                </div>
+<footer class="page-footer">
+    <div class="footer__container usefulContainer">
+        <img src="../img/LOGO/LOGO SEVEA.svg" alt="logo" class="footer-logo">
+        <div class="info">
+            <div class="info__cell">
+                <h3 class="secondary-heading">informations</h3>
+                <p>Mentions légales</p>
+                <p>CGV</p>
+                <p>CGU</p>
             </div>
-            <p class="copyright">&copy; 2022 SAS Sévéa, tous droits réservés</p>
+            <div class="info__cell">
+                <h3 class="secondary-heading">espace personnnel</h3>
+                <p>Mon compte</p>
+            </div>
+            <div class="info__cell">
+                <h3 class="secondary-heading">espace fournisseur</h3>
+                <p>Mon compte</p>
+            </div>
         </div>
-    </footer>
+        <p class="copyright">&copy; 2022 SAS Sévéa, tous droits réservés</p>
+    </div>
+</footer>
 </body>
 </html>
