some fixes and responsive card

--- a/html/404-page.html
+++ b/html/404-page.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/404-page.css" />
     <link rel="stylesheet" href="../css/top-btn.css" />
     <link rel="stylesheet" href="../css/footer.css" />
-    <title>Document</title>
+    <title>Sévéa | Votre place de marché</title>
   </head>
   <body>
     <header class="header" id="header">
