--- a/html/landing.html
+++ b/html/landing.html
@@ -30,11 +30,13 @@
                     <h1 class="landing__heading">bienvenue</h1>
                     <h1 class="landing__heading">sur la marketplace sévéa</h1>
                 </div>
-                <input type="email" name="email" placeholder="Adresse e-mail" id="">
-                <input type="password" name="password" placeholder="Mot de passe" id="">
-                <button class="accent-btn"><a href="home.html">connexion</a></button>
+                <input type="email"placeholder="Adresse e-mail" required>
+                <input type="password" placeholder="Mot de passe" required>
+                <button class="accent-btn" type="submit" id="mybutton"><a href="home.html">connexion</a></button>
+
             </div>
         </div>
     </div>
+
 </body>
 </html>
